# tweetkit

./: .gitignore  .gitmodules  CITATION.cff  LICENSE.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  clean.py  conf.py  environment.yaml  get_started.rst  index.rst  install.rst  modules.rst  tweetkit.models.rst  tweetkit.requests.rst  tweetkit.rst  tweetkit.utils.rst
docs/_source/: clean.py  conf.py
docs/api_reference/: index.rst  tweetkit.models.rst  tweetkit.requests.rst  tweetkit.rst  tweetkit.utils.rst
docs/examples/: full_archive_search.rst  index.rst  search_stream.rst
docs/getting_started/: index.rst
examples/: conversation_of_reply_search.py  find_tweet_by_id.py  fullarchive_search.py  hydrator.py  hydrator_input.txt  pagination.py  parser.py  search_stream.py  timeline_search.py  twitter_search.py  twitter_stream.py  user_lookup.py
notebooks/: Client.ipynb  Client2.ipynb  Example.ipynb  Generator.ipynb  TestException.ipynb  openapi.json
notebooks/templates/: request_method.jinja2  request_methods.jinja2
scripts/: download_tools.py  run_examples.bat
tweetkit/: __init__.py  auth.py  client.py  cmu.py  exceptions.py  models.py  schema.py
tweetkit/examples/: parser.py
tweetkit/models/: __init__.py  expansions.py  paginator.py  request.py  response.py  store.py
tweetkit/operations/: __init__.py  bookmarks.py  compliance.py  general.py  lists.py  spaces.py  tweets.py  users.py
tweetkit/requests/: __init__.py  bookmarks.py  compliance.py  general.py  lists.py  spaces.py  tweets.py  users.py
(+56 files in other folders)
