[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tweetkit"
description = "TweetKit"
requires-python = ">=3.7"
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]
dependencies = [
    "requests>=2.27",
    "oauthlib>=3.2",
    "requests-oauthlib>=1.3",
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
dev = ["pytest", "pip-tools", "build"]

[tool.setuptools.packages]
find = { namespaces = true }

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "tweetkit.__version__" }
readme = { file = "README.md" }
